# Accident-detection

./: README.md  accident_log.csv  app.py  pyproject.toml  requirements.txt
static/: style.css
templates/: dashboard.html  index.html  live.html
